tests/e2e/pass/v2_str_repr.ep
# EXIT: 0
# STDOUT: -3
# STDOUT: 3
# STDOUT: 9223372036854775807
# STDOUT: 9223372036854775808
# STDOUT: 18446744073709551615
# STDOUT: 65
# STDOUT: true
# STDOUT: false
# STDOUT: abc
# STDOUT: 65
# STDOUT: AB

fun show_u64(x: u64): void {
    println(str(x))
}

fun run(): i64 {
    println(str(0 - 3))
    println(str(u64(3)))
    show_u64(u64(9223372036854775807))
    show_u64((u64(9223372036854775807) + u64(1)))
    show_u64((u64(0) - u64(1)))
    println(str(u8(65)))
    println(str(true))
    println(str(false))
    println(str("abc"))
    println(str('A'))
    println(str(new u8[] { u8(65), u8(66) }))

    ret 0
}

fun main(): void {
    exit(run())
}
