tests/e2e/fail/str_builtin_collision.ep
# COMPILE_ERROR: cannot redefine primitive conversion 'str'
fun str(value: u8[]): str {
    ret ""
}
fun main(): void {
}
